# backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  postgres.yaml
.github/workflows/: docker-image.yml
entity/: Cargo.toml
entity/src/: authors.rs  books.rs  lib.rs  pages.rs  payments.rs  prelude.rs  reads.rs  sea_orm_active_enums.rs  users.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231217_113117_authors_name.rs  m20240118_182652_book_nullable.rs
parsing/: Cargo.toml
parsing/src/: main.rs
src/: database.rs  local_storage.rs  main.rs
src/graphql/: schema.rs
src/graphql/mutation/: authors.rs  books.rs  common.rs  mod.rs
src/graphql/query/: authors.rs  books.rs  common.rs  mod.rs
