[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
env_logger = "0.10.0"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
